Source/WebKit2/Shared/CoordinatedGraphics/threadedcompositor/CompositingRunLoop.h
@@ -28,8 +28,9 @@
 
 #if USE(COORDINATED_GRAPHICS_THREADED)
 
-#include <functional>
-#include <wtf/FastMalloc.h>
+#include <wtf/Condition.h>
+#include <wtf/Function.h>
+#include <wtf/NeverDestroyed.h>
 #include <wtf/Noncopyable.h>
 #include <wtf/RunLoop.h>
 
@@ -37,7 +38,6 @@ namespace WebKit {
 
 class CompositingRunLoop {
     WTF_MAKE_NONCOPYABLE(CompositingRunLoop);
-    WTF_MAKE_FAST_ALLOCATED;
 public:
     enum UpdateTiming {
         Immediate,
@@ -45,6 +45,7 @@ public:
     };
 
     CompositingRunLoop(std::function<void ()>&&);
+    ~CompositingRunLoop();
 
     void performTask(Function<void ()>&&);
     void performTaskSync(Function<void ()>&&);
@@ -52,13 +53,9 @@ public:
     void startUpdateTimer(UpdateTiming = Immediate);
     void stopUpdateTimer();
 
-    void run();
-    void stop();
-
 private:
     void updateTimerFired();
 
-    RunLoop& m_runLoop;
     RunLoop::Timer<CompositingRunLoop> m_updateTimer;
     std::function<void ()> m_updateFunction;
     Lock m_dispatchSyncConditionMutex;
