Source/WebKit2/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp
@@ -30,8 +30,6 @@
 
 #include "CompositingRunLoop.h"
 #include <WebCore/TransformationMatrix.h>
-#include <wtf/RunLoop.h>
-#include <wtf/StdLibExtras.h>
 
 #if USE(OPENGL_ES_2)
 #include <GLES2/gl2.h>
@@ -50,8 +48,12 @@ Ref<ThreadedCompositor> ThreadedCompositor::create(Client* client)
 
 ThreadedCompositor::ThreadedCompositor(Client* client)
     : m_client(client)
+    , m_compositingRunLoop([this] { renderLayerTree(); })
 {
-    createCompositingThread();
+    m_compositingRunLoop.performTaskSync([this, protectedThis = makeRef(*this)] {
+        m_scene = adoptRef(new CoordinatedGraphicsScene(this));
+        m_viewportController = std::make_unique<SimpleViewportController>(this);
+    });
 }
 
 ThreadedCompositor::~ThreadedCompositor()
@@ -61,14 +63,20 @@ ThreadedCompositor::~ThreadedCompositor()
 
 void ThreadedCompositor::invalidate()
 {
-    terminateCompositingThread();
+    m_scene->detach();
+    m_compositingRunLoop.stopUpdateTimer();
+    m_compositingRunLoop.performTaskSync([this, protectedThis = makeRef(*this)] {
+        m_context = nullptr;
+        m_scene = nullptr;
+        m_viewportController = nullptr;
+    });
     m_client = nullptr;
 }
 
 void ThreadedCompositor::setNativeSurfaceHandleForCompositing(uint64_t handle)
 {
-    m_compositingRunLoop->stopUpdateTimer();
-    m_compositingRunLoop->performTaskSync([this, protectedThis = makeRef(*this), handle] {
+    m_compositingRunLoop.stopUpdateTimer();
+    m_compositingRunLoop.performTaskSync([this, protectedThis = makeRef(*this), handle] {
         m_scene->setActive(!!handle);
 
         // A new native handle can't be set without destroying the previous one first if any.
@@ -81,7 +89,7 @@ void ThreadedCompositor::setNativeSurfaceHandleForCompositing(uint64_t handle)
 
 void ThreadedCompositor::setDeviceScaleFactor(float scale)
 {
-    m_compositingRunLoop->performTask([this, protectedThis = makeRef(*this), scale] {
+    m_compositingRunLoop.performTask([this, protectedThis = makeRef(*this), scale] {
         m_deviceScaleFactor = scale;
         scheduleDisplayImmediately();
     });
@@ -89,7 +97,7 @@ void ThreadedCompositor::setDeviceScaleFactor(float scale)
 
 void ThreadedCompositor::setDrawsBackground(bool drawsBackground)
 {
-    m_compositingRunLoop->performTask([this, protectedThis = Ref<ThreadedCompositor>(*this), drawsBackground] {
+    m_compositingRunLoop.performTask([this, protectedThis = Ref<ThreadedCompositor>(*this), drawsBackground] {
         m_drawsBackground = drawsBackground;
         scheduleDisplayImmediately();
     });
@@ -97,57 +105,65 @@ void ThreadedCompositor::setDrawsBackground(bool drawsBackground)
 
 void ThreadedCompositor::didChangeViewportSize(const IntSize& size)
 {
-    m_compositingRunLoop->performTaskSync([this, protectedThis = makeRef(*this), size] {
+    m_compositingRunLoop.performTaskSync([this, protectedThis = makeRef(*this), size] {
         m_viewportController->didChangeViewportSize(size);
     });
 }
 
 void ThreadedCompositor::didChangeViewportAttribute(const ViewportAttributes& attr)
 {
-    m_compositingRunLoop->performTask([this, protectedThis = makeRef(*this), attr] {
+    m_compositingRunLoop.performTask([this, protectedThis = makeRef(*this), attr] {
         m_viewportController->didChangeViewportAttribute(attr);
     });
 }
 
 void ThreadedCompositor::didChangeContentsSize(const IntSize& size)
 {
-    m_compositingRunLoop->performTask([this, protectedThis = makeRef(*this), size] {
+    m_compositingRunLoop.performTask([this, protectedThis = makeRef(*this), size] {
         m_viewportController->didChangeContentsSize(size);
     });
 }
 
 void ThreadedCompositor::scrollTo(const IntPoint& position)
 {
-    m_compositingRunLoop->performTask([this, protectedThis = makeRef(*this), position] {
+    m_compositingRunLoop.performTask([this, protectedThis = makeRef(*this), position] {
         m_viewportController->scrollTo(position);
     });
 }
 
 void ThreadedCompositor::scrollBy(const IntSize& delta)
 {
-    m_compositingRunLoop->performTask([this, protectedThis = makeRef(*this), delta] {
+    m_compositingRunLoop.performTask([this, protectedThis = makeRef(*this), delta] {
         m_viewportController->scrollBy(delta);
     });
 }
 
 void ThreadedCompositor::purgeBackingStores()
 {
+    ASSERT(isMainThread());
     m_client->purgeBackingStores();
 }
 
 void ThreadedCompositor::renderNextFrame()
 {
+    ASSERT(isMainThread());
     m_client->renderNextFrame();
-}
-
-void ThreadedCompositor::updateViewport()
-{
-    m_compositingRunLoop->startUpdateTimer(CompositingRunLoop::WaitUntilNextFrame);
 }
 
 void ThreadedCompositor::commitScrollOffset(uint32_t layerID, const IntSize& offset)
 {
+    ASSERT(isMainThread());
     m_client->commitScrollOffset(layerID, offset);
+}
+
+void ThreadedCompositor::updateViewport()
+{
+    m_compositingRunLoop.startUpdateTimer(CompositingRunLoop::WaitUntilNextFrame);
+}
+
+void ThreadedCompositor::scheduleDisplayImmediately()
+{
+    m_compositingRunLoop.startUpdateTimer(CompositingRunLoop::Immediate);
 }
 
 bool ThreadedCompositor::tryEnsureGLContext()
@@ -180,14 +196,9 @@ GLContext* ThreadedCompositor::glContext()
     return m_context.get();
 }
 
-void ThreadedCompositor::scheduleDisplayImmediately()
-{
-    m_compositingRunLoop->startUpdateTimer(CompositingRunLoop::Immediate);
-}
-
 void ThreadedCompositor::forceRepaint()
 {
-    m_compositingRunLoop->performTaskSync([this, protectedThis = makeRef(*this)] {
+    m_compositingRunLoop.performTaskSync([this, protectedThis = makeRef(*this)] {
         renderLayerTree();
     });
 }
@@ -235,56 +246,6 @@ void ThreadedCompositor::updateSceneState(const CoordinatedGraphicsState& state)
     });
 
     scheduleDisplayImmediately();
-}
-
-void ThreadedCompositor::createCompositingThread()
-{
-    if (m_threadIdentifier)
-        return;
-
-    LockHolder locker(m_initializeRunLoopConditionMutex);
-    m_threadIdentifier = createThread("WebKit: ThreadedCompositor", [this] { runCompositingThread(); });
-    m_initializeRunLoopCondition.wait(m_initializeRunLoopConditionMutex);
-}
-
-void ThreadedCompositor::runCompositingThread()
-{
-    {
-        LockHolder locker(m_initializeRunLoopConditionMutex);
-
-        m_compositingRunLoop = std::make_unique<CompositingRunLoop>([&] {
-            renderLayerTree();
-        });
-        m_scene = adoptRef(new CoordinatedGraphicsScene(this));
-        m_viewportController = std::make_unique<SimpleViewportController>(this);
-
-        m_initializeRunLoopCondition.notifyOne();
-    }
-
-    m_compositingRunLoop->run();
-
-    m_scene->purgeGLResources();
-
-    {
-        LockHolder locker(m_terminateRunLoopConditionMutex);
-        m_context = nullptr;
-        m_scene = nullptr;
-        m_viewportController = nullptr;
-        m_compositingRunLoop = nullptr;
-        m_terminateRunLoopCondition.notifyOne();
-    }
-
-    detachThread(m_threadIdentifier);
-}
-
-void ThreadedCompositor::terminateCompositingThread()
-{
-    LockHolder locker(m_terminateRunLoopConditionMutex);
-
-    m_scene->detach();
-    m_compositingRunLoop->stop();
-
-    m_terminateRunLoopCondition.wait(m_terminateRunLoopConditionMutex);
 }
 
 }
